--- a/portafolio.html
+++ b/portafolio.html
@@ -29,20 +29,25 @@
     <div class="animate__animated animate__fadeInUp">
       <h2 class="text-4xl md:text-6xl font-extrabold mb-4">Tech Lead – Salesforce & Android</h2>
       <p class="text-lg md:text-xl mb-8">Transformando procesos con <span class="font-semibold">integraciones SAP</span> y <span class="font-semibold">soluciones móviles</span></p>
-      <div class="flex justify-center gap-6">
-        <a href="https://www.linkedin.com/in/francisco-f-4676924a/" target="_blank" 
-           class="bg-white text-blue-700 px-6 py-3 rounded-full font-semibold shadow-lg hover:bg-gray-200 transition transform hover:scale-105">
-          💼 LinkedIn
-        </a>
-        <a href="https://github.com/FranciscoJFM" target="_blank" 
-           class="bg-gray-900 text-white px-6 py-3 rounded-full font-semibold shadow-lg hover:bg-gray-800 transition transform hover:scale-105">
-          💻 GitHub
-        </a>
-        <a href="#contact" 
-           class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-full font-semibold shadow-lg hover:bg-yellow-300 transition transform hover:scale-105">
-          📩 Contáctame
-        </a>
-      </div>
+    <div class="flex flex-col md:flex-row justify-center gap-4 md:gap-6 mt-6">
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/francisco-f-4676924a/" target="_blank" rel="noopener noreferrer"
+     class="bg-white text-blue-700 px-6 py-3 rounded-full font-semibold shadow-lg hover:bg-gray-200 transition transform hover:scale-105">
+    💼 LinkedIn
+  </a>
+
+  <!-- GitHub -->
+  <a href="https://github.com/FranciscoJFM" target="_blank" rel="noopener noreferrer"
+     class="bg-gray-900 text-white px-6 py-3 rounded-full font-semibold shadow-lg hover:bg-gray-800 transition transform hover:scale-105">
+    💻 GitHub
+  </a>
+
+  <!-- Contáctame -->
+  <a href="#contact"
+     class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-full font-semibold shadow-lg hover:bg-yellow-300 transition transform hover:scale-105">
+    📩 Contáctame
+  </a>
+</div>
     </div>
     <!-- Fondo animado -->
     <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] opacity-10"></div>
